# battery-data-analysis

./: .gitignore  Cargo.toml  README.md
assets/battery-history-csvs/: batteryreport.csv
src/: lib.rs  main.rs  plot.rs  read_data.rs
