[package]
name = "battery-data-analysis"
version = "0.1.0"
authors = ["Bishal Neupane <85444310+earthPerson-001@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.72"
description = "Battery history data analysis and visualization."
license = "MIT"
keywords = ["battery monitoring", "data analysis"]
readme = "README.md"
repository = ""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.31", features=["serde"]}
csv = "1.3.0"
itertools = "0.11.0"
plotters = "0.3"
serde = {version="1.0.192", features=["derive"]}
